將paymentcontroller 商業邏輯分開